		 controllers made with the RegisterWebApiControllers() extension method  (work item 21006).
		-[Core/Diagnostics] DisposableTransientComponentDiagnosticResult.Registration was always null.
		-[Core] Disallowed accidental mixed registrations of collections using different RegisterXXX overloads
		 (work item 21004).

	Improvements/Changes:
		-[WebApi] SimpleInjectorWebApiDependencyResolver.BeginScope will now only create a new execution 
		 context scope in case there is no active scope yet (work item 21015).
		-[Core/Diagnostics] SimpleInjector.Diagnostics.dll merged with core library (work item 21008).
		-pWebApi] SimpleInjectorWebApiExtensions.RegisterWebApiFilterProvider has been made obsolete (work
		 item 21017).

	Project Changes:
		-Switched from standalone FxCop to integrated Visual Studio 2013 Static Code Analysis. Created a
		 custom rule set and fixes some issues that came up (work item 20998).
		-Switched from MSTest to NUnit (work item 19266).


Version 2.7.3 (v2.7.3 RTM) 2015-03-09

	Bug fixes:
		-[Core] DecoratorPredicateContext.ImplementationType returned service type in case the decoratee was
		 not transient or singleton (work item 21012).

	Additions:
		-LifetimeScoping project is now available as PCL package as well (work item 21013).
			

Version 2.7.2 (v2.7.2 RTM) 2015-02-12

	Bug fixes:
		-[Core] Registering collections using RegisterManyForOpenGeneric while supplying RegisterAll as 
		 callback delegate caused duplicate registrations in case a type implemented multiple closed versions
		 of the same abstraction (work item 20996).
		-[Core] Calling RegisterAll many times (i.e. in combination with RegisterManyForOpenGeneric) caused
		 severe performance problems (work item 21001).
		-[Core] The RegisterManyForOpenGeneric overloads that accepted a list of types, did not use the
		 supplied lifestyle correctly, which could cause registrations with a torn lifestyle.